feat: get user
