# router/users.go
@@ -1,0 +1,10 @@
+package router
+
+import (
+	"github.com/2paperstar/movie-api/controller"
+	"github.com/gofiber/fiber/v2"
+)
+
+func users(api fiber.Router) {
+	api.Get("/me", RequireAuth, controller.GetMyInformation)
+}
